k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpg-api
  namespace: rpg-pipeline
  labels:
    app: rpg-api
  annotations:
    checkov.io/skip1: "CKV_K8S_43=Dev local Kind : image chargee via kind load docker-image, pas de digest disponible. En prod (ghcr.io) l'image est epinglee par digest et signee via Cosign."
    checkov.io/skip2: "CKV_K8S_15=IfNotPresent requis pour kind load docker-image, l'image locale n'existe dans aucun registre a pull."
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rpg-api
  template:
    metadata:
      labels:
        app: rpg-api
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rpg-api
          image: rpg-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secrets
              mountPath: /etc/secrets
              readOnly: true
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: secrets
          secret:
            secretName: rpg-api-secret
        - name: data
          persistentVolumeClaim:
            claimName: rpg-api-data
