k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpg-api
  namespace: rpg-pipeline
spec:
  selector:
    app: rpg-api
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
